# ETL-Snowflake-DBT-Airflow

./: .pdm-python  Dockerfile  compose.yaml  pyproject.toml
.astro/: config.yaml
dags/: get_seeds.py  snowflake_dag.py
dags/dbt/snowflake/: dbt_project.yml
dags/dbt/snowflake/macros/: pricing.sql
dags/dbt/snowflake/models/marts/: fct_orders.sql  generic_tests.yml  int_order_items.sql  int_order_items_summary.sql
dags/dbt/snowflake/models/staging/: stg_tpch_line_items.sql  stg_tpch_orders.sql  tpch_sources.yml
dags/dbt/snowflake/tests/: fct_order_date_valid.sql  fct_orders_discount.sql
